# Feedback-analyzing-Telegarm-bot

./: Dockerfile  ReadME.md  docker-compose.yml  main.py  pyproject.toml  requirments.txt
.github/workflows/: cd.yml  ci.yml
docs/: Копия Архитектура тг бота для анализа отзывов.drawio
src/bot/: __init__.py  dispatcher.py
src/bot/handlers/: __init__.py  audio_handler.py  commands.py  text_handler.py
src/config/: __init__.py  logger_config.py  settings.py
src/core/: __init__.py  database.py  exceptions.py  models.py  orchestrator.py
src/services/NLP-service/: models.py
src/services/NLP_service/: NLP_service.py  __init__.py  exceptions.py  intent.py  sentiment.py  topic.py  utils.py
src/services/STT/: STTservice.py  __init__.py  exceptions.py  utils.py
src/services/Summarisation_service/: __init__.py  algorithms.py  exceptions.py  service.py  utils.py
src/services/storage/: __init__.py  database.py  exceptions.py  models.py  repositories.py  service.py  storage_service.py
src/utils/: Tg file downloader.py  telegram_downloader.py
tests/: conftest.py
tests/test_bot/: test_handlers.py
tests/test_services/: test_nlp.py  test_orchestrator.py  test_storage.py  test_stt.py  test_summarization.py
